# SQLAlchemy

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  snoop.rtf
mysql-dump/: sakila-schema.sql
src/: config.py  docker-Elastic.yml
src/sdv.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sdv/application/: manager.py
src/sdv/domain/: extract_resources.py
src/sdv/domain/documents/: actor_document.py  actor_es_document.py  document_type.py
src/sdv/domain/entities/: abstract_actor_entity.py  actor.py
src/sdv/domain/ports/: resources_repository.py
src/sdv/infrastructure/sql/entities/: __init__.py  actor_sql.py
src/sdv/infrastructure/sql/repositories/: actor_sql_repository.py
