[metadata]
name = sdv
version = 0.1.0
classifiers =
   Programming Language :: Python :: 3

[options]
python_requires = ~=3.9
packages = find:
package_dir =
   =src
install_requires =
   certifi==2020.6.20
   chardet==3.0.4
   elasticsearch==7.9.1
   fire==0.3.1
   idna==2.10
   mysql-connector==2.2.9
   requests==2.24.0
   six==1.15.0
   SQLAlchemy==1.4.41
   termcolor==1.1.0
   urllib3==1.25.10
   retry==0.9.2
   PyMySQL==1.0.2

[options.extras_require]
test =
   pytest==7.1.3
   pytest-cov==4.0.0
   parameterized==0.8.1
   retry==0.9.2
lint =
   black==22.10.0

[options.packages.find]
where = src
